<resources>
    <string name="app_name">Parvarish4U</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="tv_passwordresetinstruction">We just need your registered Email id to send you password reset instructions</string>
    <string name="tv_passwordupdateinstruction">Please enter password minimum 6 characters.</string>
    <string name="username">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="identity">Identity</string>
    <string name="aadhar_id_voter_id">Aadhar ID/Voter ID</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="parvarish_knowledge_center">Parvarish4U</string>
    <string name="welcome">Welcome</string>
    <string name="books_list">Books List</string>
    <string name="center_location">Center Location</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_logout_profile">Logout</string>
    <string name="nav_header_desc">desc</string>
    <string name="nav_header_title">Welcome User!</string>
    <string name="change_password">Change Password</string>
    <string name="Book_Id">Book Id</string>
    <string name="bookidd">Book Id-</string>
    <string name="mobile">Mobile No</string>
    <string name="menu_feedback">Feedback</string>
    <string name="donor_list">Donor List</string>
    <string name="author_name">Author Name</string>
    <string name="book_title">Book Title</string>
    <string name="book_cost">Book Cost</string>
    <string name="book_location">Book Location</string>
    <string name="donor_name">Donor Name</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="about_page_description" translatable="false" />
    <string name="about_contact_us">Contact us</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_website">Visit our website</string>
    <string name="user_name">User Name</string>
    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="teacher_address">Teacher Address</string>
    <string name="teacher_mobile">Teacher Mobile</string>
    <string name="teacher_identity">Teacher identity</string>
    <string name="teacher_status">Teacher status</string>
    <string name="users_list">Users List</string>
    <string name="password">Password</string>
    <string name="skip_login"><![CDATA[>>Skip Login>>]]></string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="registration">REGISTRATION</string>
    <string name="choose">Choose</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91</string>
    <string name="minus">-</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="didn_t_receieve_the_code">Didn\'t receieve the code?</string>
    <string name="resend_code">RESEND CODE</string>
    <string-array name="pub_year">
        <item>Year</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="our_work">Our Work</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="about_page_description1" translatable="false">This is an initiative by alumni of Jawahar Navodaya Vidyalaya and youth from different sectors of working environment, different part of society and also from different geographical area, rural background. We all have same mind set about the problem of remote area and also challenges faced by backward class or other area of society. This mindset gave a positive path to all of us to do something for positive change . This laid the foundation of ParvarishForYou: a helping hand.</string>
    <string name="about_page_description2" translatable="false">♦ Initiative by a Team of Youth having Common Goal for Positive Change.\n♦ Team - From different working Sectors, Environment, Society and Geographical area, rural background.\n♦ Common Goal - Eliminate problems and challenges faced by Backward Class of rural area and Society.\n♦ This noble cause overwhelms and gives us the everlasting motivation, energy and sufficient fuel to laid down the foundation of Parvarish: a helping hand.\n♦ Parvarish - A Helping Hand’ will provide you the Canvas, Colour, Palette and Brush to paint the dreams of a Child.\n♦ Canvas (Life of A child) + Colour, Palette and Brush (Parvarish) = Painting (Dreams with flying Colours).\n</string>
    <string name="about_page_description3" translatable="false">We are here to work for different sector like education, health, agriculture, organic farming, counselling, behavioural change (Mentioned by P.M. Modi in rajya-sabha on 08 feb 2018), social awareness, to full-fill the gap between government facilities and ground level benefits etc</string>
    <string name="about_page_description4" translatable="false">♦ Team to impart behavioural changes in society by the way of education.\n♦ To develop an ecosystem of mutualism instead of competetion for sustainable prosperity.</string>
    <string name="about_page_description5" translatable="false">To fulfill the gap between rural and urban population with various mechanism and also to reflect them in government census or survey.\n\n</string>
    <string name="ourwork_page_description1" translatable="false">We are here to work for different sector like education, health, agriculture, organic farming, counselling, behavioural change (Mentioned by P.M. Modi in rajya-sabha on 08 feb 2018), social awareness, to full-fill the gap between government facilities and ground level benefits etc.</string>
    <string name="ourwork_page_description2" translatable="false">We are working in education field where there is no institutional source of education. As most of the places have schools but there is no carrier guiding or preparation centres. This is the major cause of backwardness there as we think. Most of the people who get education move away from these places. This creates a gap between rural and urban development. We are working to fulfill this gap.</string>
    <string name="ourwork_page_description3" translatable="false">Parvarish4U has started this scheme. Under this scheme we are trying to support talent either in academics , sports and any other field of life. Under this scheme organisation support students in different ways.</string>
    <string name="ourwork_page_description4" translatable="false">1. To support student one year school fee of student who got first position in school. (Already selected two students from two different schools).\n2. Awarding and supporting district topper with cash support and other required support .</string>
    <string name="ourwork_page_description5" translatable="false">There are several other ways where organisation is working to support real and needy talent.</string>
    <string name="ourwork_page_description6" translatable="false">Under this scheme we are in the process of establishing libraries at various remote locations where students in need of books.
These libraries also accept books as donation from around the globe because most of the people gives at no cost .so students can use these books , magazines , reference books, syllabus books from these libraries at very nominal membership fee.
So , if any one interested to donate books pls send your name and address with city name to our WhatsApp no. We will arrange a pick up from there. This is to create a habit of reading in society which is getting reduce day by day.</string>
    <string name="ourwork_page_description7" translatable="false">This programme has been started with the vision of reducing or eliminating the gap of international level school and school which do not have sufficient resources. Our team organises different activites and different sessions at school at different time . Also we provide sessions for teachers so that gap can be reduced. If any one interested for parternship please send your name and address to our WhatsApp numner. Our concerned team will contact you soon.</string>
    <string name="ourwork_page_description8" translatable="false">Under this scheme we are establishing centres where sessions and classes can be arranged by expert to increase capacity of students. As most of problems of society can be solved with this capacity building initiative.
Currently we are running our capacity building centres which is giving very good response.</string>
    <string name="ourwork_page_description9" translatable="false">Under this programme we are making parternership with the computer centres, shops which use to help students. We provide all kind of assistance to them with the help of our technical team. We also pay charges for those talented students who are not able to pay that .
So if you are interested to be technical partner pls send you name and address to WhatsApp .our team will contact you soon . </string>
    <string name="ourwork_page_description10" translatable="false">Parvarish4U has started this program to provide internship for freshers or students. Under this program individual will work under the guidance of our experienced team</string>
    <string name="ourwork_page_description11" translatable="false">We are working to improve health and aware people about different health issues faced by them. We are organizing various programs at ground level so that maximum people can be benefited. Programs like below:</string>
    <string name="ourwork_page_description12" translatable="false">♦ Health awareness camps.\n ♦Yoga classes.</string>
    <string name="ourwork_page_description13" translatable="false">Agriculture is the bone of our economy and it should be taken care. We are working to enrich agricultural field in India. Below are the areas which are being worked upon:</string>
    <string name="ourwork_page_description14" translatable="false">♦ Farming, Fishery, Beekeeping, Dairy, Horticulture, Animal Husbandry, Pottery \n ♦ Animal health and soil health.\n ♦ Traditional to technological farming.\n ♦ Technology awareness - dip irrigation, soil fertility card.\n ♦ Government policy awareness.\n ♦ Kissan library</string>
    <string name="join_us">Join Us</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>