<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/about_us" />
    <item
        android:id="@+id/nav_our_work"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/our_work" />

    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_contact_phone_black_24dp"
        android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_joinus"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/join_us" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />
    </group> <!--
    <item android:title="@string/user_corner">
        <menu>
                 <item
                      android:id="@+id/nav_add_book"
                      android:icon="@drawable/ic_menu_gallery"
                      android:title="@string/menu_add_book" />

              </menu>
          </item>
-->
</menu>
