<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite">

   <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
       android:layout_margin="3dp"

        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        android:layout_height="wrap_content">

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">



            <ImageView
                android:id="@+id/teacherDetailImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:contentDescription="@string/parvarish_knowledge_center"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <LinearLayout
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/nameDetailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:padding="5dp"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/user_name" />
                <TextView
                    android:id="@+id/tviewrole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:text="@string/role" />

                <TextView
                    android:id="@+id/tviewemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:text="@string/email" />

                    <TextView
                        android:id="@+id/tviewaddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:padding="5dp"
                        android:textStyle="italic"
                        android:minLines="1"
                        android:text="@string/teacher_address" />
                <TextView
                    android:id="@+id/tviewmobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"

                    android:minLines="1"
                    android:text="@string/teacher_mobile" />
                <TextView
                    android:id="@+id/tviewidentity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:minLines="1"
                    android:text="@string/teacher_identity" />
                <TextView
                    android:id="@+id/tviewstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp"
                    android:textColor="@color/main"
                    android:textStyle="bold"
                    android:minLines="1"
                    android:text="@string/teacher_status" />
            </LinearLayout>
       </LinearLayout>
   </androidx.cardview.widget.CardView>




</ScrollView>
