<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/l1"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:hint="@string/username"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/l2"
        android:layout_below="@+id/l1"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailID"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/l3"
        android:layout_below="@+id/l2"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobile"
            android:hint="@string/mobile_number"
            android:maxLines="1"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/l4"
        android:layout_below="@+id/l3"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvCenterName"
            android:hint="@string/center_location"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/l5"
        android:layout_below="@+id/l4"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etIdentity"
            android:hint="@string/identity"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvRole"
            android:hint="@string/role"
            android:maxLines="1"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />








<LinearLayout
    android:id="@+id/l10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_below="@+id/tvRole"
    android:orientation="horizontal">
    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/dbuttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:text="@string/update"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/dbuttonDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:text="@string/delete"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/dbuttonBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:text="@string/back"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
</LinearLayout>

</RelativeLayout>
</ScrollView>
